[gd_scene load_steps=5 format=3 uid="uid://cu7dielew5pgr"]

[ext_resource type="Script" path="res://LP/lp_4_2.gd" id="1_6kfwa"]
[ext_resource type="Theme" uid="uid://c78csml3a1r6k" path="res://Langdocs/new_theme.tres" id="1_wxrm7"]
[ext_resource type="Theme" uid="uid://d2vosag2ged8x" path="res://Langdocs/22.tres" id="2_cn6ln"]

[sub_resource type="LabelSettings" id="LabelSettings_add4p"]
font_size = 60

[node name="LP 4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6kfwa")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 113.0
offset_right = 640.0
offset_bottom = 410.0
theme = ExtResource("1_wxrm7")
text = "Enter Package Weight in kg:

Enter Package Height in cm:

Enter Package Width in cm:

Enter Package Length in cm:"

[node name="txtWeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 641.0
offset_top = 121.0
offset_right = 1131.0
offset_bottom = 182.0

[node name="txtHeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 641.0
offset_top = 191.0
offset_right = 1131.0
offset_bottom = 252.0

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 263.0
offset_right = 1133.0
offset_bottom = 324.0

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 643.0
offset_top = 333.0
offset_right = 1133.0
offset_bottom = 394.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 414.0
offset_right = 592.0
offset_bottom = 473.0
theme = ExtResource("2_cn6ln")
text = "CALCULATE"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 771.0
offset_top = 414.0
offset_right = 1132.0
offset_bottom = 469.0
theme = ExtResource("2_cn6ln")
text = "CLEAR"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 1005.0
offset_top = 14.0
offset_right = 1138.0
offset_bottom = 89.0
theme = ExtResource("2_cn6ln")
text = "EXIT"

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 180.0
offset_top = 498.0
offset_right = 964.0
offset_bottom = 615.0
label_settings = SubResource("LabelSettings_add4p")
horizontal_alignment = 1

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
